--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
----
-layout: home
----
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-a970c74a-4b55-4f8f-9c15-b663cef2483a"></attachment><p>--- layout: home ---</p><p><br></p>
