--- a/404.html
+++ b/404.html
@@ -1,24 +1,1 @@
----
-layout: default
----
-
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-ca3a5e0f-9ba1-462d-880b-29cdcb87ceba"></attachment><h1>--- layout: default --- 404</h1><p><strong>Page not found :(</strong></p><p>The requested page could not be found.</p><p><br></p>
